fix z-index on menu button

--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ this will be centered on the page*/
     right: 1rem;
     top: 1rem;
 	width:3rem;
+	
+	z-index:1030 ;/*bootstrap default*/
 }
 /*--------------------------------------------------------------
 # Navigation
